# Metronome-App

./: .TODO  .gitignore  LICENSE  README.md
MetronomeApp/: Cargo.toml  build-installer.ps1  build.rs
MetronomeApp/assets/defaults/: mn_accent_presets.json  mn_parameters.json  mn_settings.json  mn_themes.json
MetronomeApp/assets/images/: icon.rc  tab.aseprite
MetronomeApp/assets/install/: icon.aseprite
MetronomeApp/src/: app.rs  main.rs
MetronomeApp/src/app/: app_data.rs  core.rs  default.rs  defaults.rs  lifecycle.rs  mod.rs  persistence.rs  plot.rs  program.rs  sound.rs  tabs_layout.rs  types.rs  ui.rs
MetronomeApp/src/app/data/: app_data.rs  mod.rs
MetronomeApp/src/app/data/accents/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/data/general/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/data/practice/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/data/runtime/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/data/settings/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/data/themes/: defaults.rs  mod.rs  types.rs
MetronomeApp/src/app/features/: layout.rs  mod.rs  registry.rs  shell.rs  traits.rs
MetronomeApp/src/app/features/accents/: accents_panel.rs  accents_side.rs  mod.rs  state.rs
MetronomeApp/src/app/features/blocks/: growth.rs  info.rs  mod.rs  play.rs  plot.rs  plot_ui.rs  practice.rs  section.rs  sound.rs  status.rs  tempo.rs
MetronomeApp/src/app/features/graph/: mod.rs  plot_ui.rs
MetronomeApp/src/app/features/logs/: logs_panel.rs  mod.rs  state.rs
MetronomeApp/src/app/logic/: accents.rs  clock.rs  color_scheme.rs  functions.rs  keyboard.rs  load_utils.rs  logs.rs  metronome.rs  mod.rs  popup_utils.rs  sound.rs  tempo.rs  ui_utils.rs  updates.rs
MetronomeApp/src/app/persistence/: load.rs  mod.rs  save.rs  versioned.rs
MetronomeApp/src/app/systems/: mod.rs
MetronomeApp/src/app/ui/: functions.rs  layout.rs  mod.rs  plot.rs  sound.rs
MetronomeApp/wix/: Banner.aseprite  Dialog.aseprite  License.rtf  assets.wxs  main.wxs
(+116 files in other folders)
