[package]
name = "MetronomeApp"
version = "0.2.6"
authors = ["Hunter <huntersfred@gmail.com>"]
description = "A customizable tempo metronome with tempo curves and sound options"
repository = "https://github.com/UnbrokenHunter/Metronome-App"
license = "MIT"
edition = "2024"
build = "build.rs"
rust-version = "1.91.0"

[dependencies]
chrono = "0.4.41"
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
egui_plot = "0.32.1"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
open = "5.3.4"
rodio = "0.20.1"
semver = "1.0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.3.0", features = ["json"] }

[build-dependencies]
embed-resource = "3.0.3"

[workspace.metadata.release]
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
publish = false
push = true
